fixed overflow on body, font on home banner, sticky footer

--- a/public/styles/layout/forum-view.css
+++ b/public/styles/layout/forum-view.css
@@ -123,7 +123,8 @@
 .hideSmall {
   display: none;
 }
-@media (min-width: 768px) {
+
+@media only screen and (min-width: 768px) {
   .subforaLastPost a {
     line-height: 30px;
   }
